<resources>
    <string name="app_name">Faculty Comms</string>
    <string name="title">Parent Faculty Communication</string>
    <string name="staff_registration">Staff Registration</string>
    <string name="parent_registration">Parent Registration</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="staff">Staff</string>
    <string name="parent">Parent</string>
    <string name="image">Image</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="faculty_name">Faculty Name</string>
    <string name="parent_name">Parent Name</string>
    <string name="student_name">Student Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="mail_id">Email ID</string>
    <string name="register">Register</string>
    <string name="send">Send</string>
    <string name="student_roll_no">Roll Number</string>
    <string name="staff_id">Staff ID</string>
    <string-array name="degree">
        <item>BE</item>
        <item>ME</item>
    </string-array>
</resources>